# SIEGMA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  helpers.cmake
PCB/: PCB.json  Schematic.json
PCB/Gerber/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
STL/Dispenser_Bracket/: ReadMe.txt  uni_bracket.stl
Schematic/: ReadMe.txt
src/: main.c  main.cpp
src/Rondell/: CMakeLists.txt  rondell.c  rondell.h
src/SerialUART/: CMakeLists.txt  SerialUART.c  SerialUART.h
src/dispenser/: CMakeLists.txt  Dispenser.c  Dispenser.h  dispenser.c  dispenser.h
src/limitSwitch/: CMakeLists.txt  limitSwitch.c  limitSwitch.h
src/motor/: CMakeLists.txt  motor.c  motor.h
src/serialUART/: CMakeLists.txt  serialUART.c  serialUART.h
src/tmc2209/: CMakeLists.txt  HardwareSerial.c  HardwareSerial.h  TMC2209.c  TMC2209.h  tmc2209.c  tmc2209.h  tmc2209_intern.h
src/tmc2209Alt/: CMakeLists.txt  tmc2209Alt.c  tmc2209Alt.h
src/tmc2209Arduino/: CMakeLists.txt  SerialUART.cpp  SerialUART.h  TMC2209.cpp  TMC2209.h
src/tmc2209ArduinoC/: CMakeLists.txt  SerialUART.c  SerialUART.h  TMC2209.c  TMC2209.h
src/touchSensor/: CMakeLists.txt  touchSensor.c  touchSensor.h
test/integration/: CMakeLists.txt  dispenser.c  integrationTest_dispenser.c  integrationTest_limitSwitch.c  integrationTest_limitSwitche.c  integrationTest_motor.c  limitSwitches.c  motor.c
test/unit/: CMakeLists.txt  test_dispenser.c  test_tmc2209.c
test/unit/dummies/hardware/: gpio.c  gpio.h
test/unit/dummies/pico/: time.c  time.h
test/unit/dummies/serialUART/: serialUART.h
test/unit/dummies/tmc2209/: tmc2209.c  tmc2209.h
